--- a/example/app/public/index.html
+++ b/example/app/public/index.html
@@ -10,7 +10,7 @@
   <meta property="og:locale" content="en-us">
   <meta property="og:title" content="React Diff View">
   <meta property="og:description" content="React components for code diff.">
-  <meta property="og:url" content="https://github.com/wmzy/react-diff-view">
+  <meta property="og:url" content="https://github.com/wmzy/diff-view-react">
   <meta property="og:site_name" content="React Diff View">
   <meta property="og:type" content="article">
   <!--
@@ -43,10 +43,10 @@
   </header>
   <div class="page-subheader">
     <div class="container">
-      <a href="http://github.com/wmzy/react-diff-view" class="page-subheader__link" target="_blank">Code and Docs on GitHub</a>
+      <a href="http://github.com/wmzy/diff-view-react" class="page-subheader__link" target="_blank">Code and Docs on GitHub</a>
       <span class="page-subheader__button">
-        <a id="github-stars-button" class="github-button" data-style="" href="https://github.com/wmzy/react-diff-view" data-count-href="/wmzy/react-diff-view/stargazers"
-          data-count-api="/repos/wmzy/react-diff-view#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star wmzy/react-diff-view on GitHub">Star</a>
+        <a id="github-stars-button" class="github-button" data-style="" href="https://github.com/wmzy/diff-view-react" data-count-href="/wmzy/diff-view-react/stargazers"
+          data-count-api="/repos/wmzy/diff-view-react#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star wmzy/diff-view-react on GitHub">Star</a>
       </span>
     </div>
   </div>
